First working version and readme instructions to create a tomcat container.