@@ -1,17 +1,57 @@
+#Get latest ubuntu image
 FROM ubuntu:latest
 
-#Install java development kit
-RUN apt-get update && apt-get install -y default-jdk tomcat7
+# Set an Environment variable for Tomcat
+ENV TOMCAT_VERSION 8.0.37
 
-RUN sed -i -e 's/JAVA_OPTS/#JAVA_OPTS/g' /etc/default/tomcat7
+# Set locales
+RUN locale-gen en_GB.UTF-8
+ENV LANG en_GB.UTF-8
+ENV LC_CTYPE en_GB.UTF-8
 
-RUN echo "JAVA_OPTS='-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -Xmx512m -XX:MaxPermSize=256m -XX:+UseConcMarkS$
+# Fix sh
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
-CMD ["/usr/bin/tail","-f", "/dev/null"]
+# Install dependencies
+RUN apt-get update && \
+apt-get install -y git build-essential curl wget software-properties-common
 
-#RUN service tomcat7 restart
-#RUN /etc/init.d/tomcat7 start
+# Install JDK 8
+RUN \
+echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections && \
+add-apt-repository -y ppa:webupd8team/java && \
+apt-get update && \
+apt-get install -y oracle-java8-installer wget unzip tar && \
+apt-get install -y tomcat8-docs tomcat8-admin tomcat8-examples && \
+rm -rf /var/lib/apt/lists/* && \
+rm -rf /var/cache/oracle-jdk8-installer
 
-RUN service mysql restart
-EXPOSE 3306
-EXPOSE 8080
+# Define commonly used JAVA_HOME variable
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+
+# Get Tomcat and install Tomcat
+RUN wget --quiet --no-cookies http://apache.rediris.es/tomcat/tomcat-8/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz $
+tar xzvf /tmp/tomcat.tgz -C /opt && \
+mv /opt/apache-tomcat-${TOMCAT_VERSION} /opt/tomcat && \
+rm /tmp/tomcat.tgz
+
+#Set Environment Variables
+ENV CATALINA_HOME /opt/tomcat
+ENV PATH $PATH:$CATALINA_HOME/bin
+
+#Expose container ports
+# Connector port
+EXPOSE 7556
+
+#Create directory inside container to host webapps
+VOLUME "/opt/tomcat/webapps"
+
+#set default working directory for all users as they use the interactive shell
+WORKDIR /opt/tomcat
+
+# Change tomcat connector port
+RUN sed -i -e 's/8080/7556/g' /opt/tomcat/conf/server.xml
+
+# Launch Tomcat
+CMD ["/opt/tomcat/bin/catalina.sh", "run"]
+
